--- a/Projects/Lesson2/WpfTestMailSender/MailSender/WpfMailSender.xaml
+++ b/Projects/Lesson2/WpfTestMailSender/MailSender/WpfMailSender.xaml
@@ -1,35 +1,37 @@
-﻿<Window x:Class="MailSender.WpfMailSender"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MailSender"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" x:Class="MailSender.WpfMailSender"
         mc:Ignorable="d"
-        Title="MainWindow" Height="366" Width="569" Icon="Images/envelope.png">
+        Title="MainWindow" Icon="Images/envelope.png" Width="740">
     <Grid>
         <DockPanel>
             <Menu x:Name="menu" Height="25" VerticalAlignment="Top" DockPanel.Dock="Top">
-                <MenuItem Name="miFile" Header="Файл">
-                    <MenuItem Name="miClose" Header="Закрыть" Click="miClose_Click"/>
+                <MenuItem x:Name="miFile" Header="Файл">
+                    <MenuItem x:Name="miClose" Header="Закрыть" Click="miClose_Click"/>
                 </MenuItem>
             </Menu>
-            <TabControl x:Name="tabControl" DockPanel.Dock="Top">
-                <TabItem Header="Формирование группы рассылки">
+            <TabControl x:Name="tabControl" DockPanel.Dock="Top" >
+                <TabItem Header="Формирование группы рассылки" x:Name="tabMakingMailGroup">
                     <Grid Background="#FFE5E5E5">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="65*"/>
-                            <RowDefinition Height="170*"/>
+                            <RowDefinition Height="60"/>
+                            <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
                         <ToolBarTray HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="Auto" Height="Auto">
-                            <ToolBar x:Name="tbSender" HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="520" Margin="0,0,-20,0">
-                                <Label x:Name="lSender" Content="Выбрать отправителя" Height="25" Width="130"/>
+
+                            <ToolBar x:Name="tbSender" HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="Auto" Band="0" BandIndex="0">
+                                <Label x:Name="lSender" Content="Выбрать отправителя" Height="25" Width="Auto"/>
                                 <ComboBox x:Name="cbSenderSelect" Height="25" Margin="0" VerticalAlignment="Top" Width="270" SelectedIndex="0" ToolTip="Выбрать email отправителя">
-                                   <!-- <ComboBoxItem Content="progamer@yandex.ru" />
-                                    <ComboBoxItem Content="fsprogamer@gmail.com"/>
-                                    -->
+                                    <!-- <ComboBoxItem Content="progamer@yandex.ru" />
+                                <ComboBoxItem Content="fsprogamer@gmail.com"/>
+                                -->
                                 </ComboBox>
                                 <Button x:Name="btnAddSender" Width="25" Height="25" ToolTip="Добавить">
                                     <Image Source="Images\add.png"/>
@@ -41,11 +43,45 @@
                                     <Image Source="Images\delete.png"/>
                                 </Button>
                             </ToolBar>
+
+                            <ToolBar x:Name="tbSmtp" HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="Auto" Band="1" BandIndex="0">
+                                <Label x:Name="lSmtp" Content="Выбрать smtp-сервер" Height="25" Width="Auto"/>
+                                <ComboBox x:Name="cbSmtpSelect" Height="25" Margin="0" VerticalAlignment="Top" Width="270" SelectedIndex="0" ToolTip="Выбрать smtp-сервер"/>
+                                <Button x:Name="btnAddSmtp" Width="25" Height="25" ToolTip="Добавить">
+                                    <Image Source="Images\add.png"/>
+                                </Button>
+                                <Button x:Name="btnEditSmtp" Width="25" Height="25" ToolTip="Редактировать">
+                                    <Image Source="Images\edit.png"/>
+                                </Button>
+                                <Button x:Name="btnDeleteSmtp" Width="25" Height="25" ToolTip="Удалить">
+                                    <Image Source="Images\delete.png"/>
+                                </Button>
+                            </ToolBar>
+
+                            <ToolBar x:Name="tbPlanner" HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="230" Band="0" BandIndex="1" >
+                                <Label x:Name="lPlanner" Content="Перейти в планировщик" Height="25" Width="Auto"/>
+                                <Button x:Name="btnClock" Width="25" Height="25" ToolTip="Перейти в планировщик" Click="btnClock_Click">
+                                    <Image Source="Images\clock.png"/>
+                                </Button>
+                            </ToolBar>
+
+                            <ToolBar x:Name="tbAddressee" HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="230" Band="1" BandIndex="1" >
+                                <Label x:Name="lAddressee" Content="Список адресатов" Height="25" Width="Auto"/>
+                                <Button x:Name="btnAddAddressee" Width="25" Height="25" ToolTip="Добавить">
+                                    <Image Source="Images\add.png"/>
+                                </Button>
+                                <Button x:Name="btnEditAddressee" Width="25" Height="25" ToolTip="Редактировать">
+                                    <Image Source="Images\edit.png"/>
+                                </Button>
+                                <Button x:Name="btnDeleteAddressee" Width="25" Height="25" ToolTip="Удалить">
+                                    <Image Source="Images\delete.png"/>
+                                </Button>
+                            </ToolBar>
                         </ToolBarTray>
                         <DataGrid x:Name="dgEmails" HorizontalAlignment="Stretch" Grid.Row="1" VerticalAlignment="Stretch"/>
                     </Grid>
                 </TabItem>
-                <TabItem Header="Планировщик">
+                <TabItem Header="Планировщик" x:Name="tabPlanner" >
                     <Grid Background="#FFE5E5E5">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -57,19 +93,23 @@
                             <ColumnDefinition Width="190"/>
                         </Grid.ColumnDefinitions>
                         <Calendar x:Name="cldSchedulDateTimes" HorizontalAlignment="Left"  VerticalAlignment="Top" SelectionMode="MultipleRange" Grid.Row="0"  Margin="5"/>
-                        <TextBox x:Name="tbTimePicker" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" Grid.Row="1" VerticalAlignment="Top"  Margin="5"/>
+                        <!--TextBox x:Name="tbTimePicker" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" Grid.Row="1" VerticalAlignment="Top"  Margin="5"/-->
+                        <xctk:TimePicker x:Name="tbTimePicker" HorizontalAlignment="Stretch" Margin="5" Grid.Row="1" VerticalAlignment="Top" Width="Auto"/>
                         <Button x:Name="btnSend" HorizontalAlignment="Stretch"  Grid.Row="2" VerticalAlignment="Top" Margin="5" Click="btnSend_Click">
-                            <Button.Content>
-                                <StackPanel Orientation="Horizontal">
-                                    <Image Source="Images/clock.png" Width="16" Height="16"></Image>
-                                    <TextBlock Text="Отправить запланированно"/>
-                                </StackPanel>
-                            </Button.Content>
+                            <StackPanel Orientation="Horizontal">
+                                <Image Source="Images/clock.png" Width="16" Height="16"/>
+                                <TextBlock Text="Отправить запланированно" Margin="5,0,5,0"/>
+                            </StackPanel>
                         </Button>
-                        <Button x:Name="btnSendAtOnce" Content="Отправить сразу" HorizontalAlignment="Stretch"  Grid.Row="3" VerticalAlignment="Top" Margin="5" Click="btnSendAtOnce_Click"/>
+                        <Button x:Name="btnSendAtOnce" HorizontalAlignment="Stretch"  Grid.Row="3" VerticalAlignment="Top" Margin="5" Click="btnSendAtOnce_Click">
+                            <StackPanel Orientation="Horizontal">
+                                <Image Source="Images/envelope.png" Width="16" Height="16" />
+                                <TextBlock Text="Отправить сразу" Margin="5,0,5,0"/>
+                            </StackPanel>
+                        </Button> 
                     </Grid>
                 </TabItem>
-                <TabItem Header="Редактор писем">
+                <TabItem Header="Редактор писем" x:Name="tabLetterEditor">
                     <Grid Background="#FFE5E5E5">
                         <RichTextBox x:Name="richTextBox" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
                             <FlowDocument>
@@ -80,7 +120,7 @@
                         </RichTextBox>
                     </Grid>
                 </TabItem>
-                <TabItem Header="Статистика">
+                <TabItem Header="Статистика" x:Name="tabStatistics">
                     <Grid Background="#FFE5E5E5"/>
                 </TabItem>
             </TabControl>
