--- a/Projects/Lesson7/EFTest/EntityFrameworkApplication/Report1.rdlc
+++ b/Projects/Lesson7/EFTest/EntityFrameworkApplication/Report1.rdlc
@@ -141,7 +141,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Sum(Fields!TrackId.Value)</Value>
+                              <Value>=Fields!TrackId.Value</Value>
                               <Style>
                                 <FontFamily>Tahoma</FontFamily>
                                 <Color>#4d4d4d</Color>
