--- a/Projects/Lesson1/WpfTestMailSender/Event/MainWindow.xaml
+++ b/Projects/Lesson1/WpfTestMailSender/Event/MainWindow.xaml
@@ -6,6 +6,6 @@
         xmlns:local="clr-namespace:Event"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid Name="MainGrid" MouseUp="Grid_MouseUp" Background="LightBlue">
+    <Grid Name="MainGrid" MouseUp="Grid_MouseUp" MouseDown="MainGrid_MouseDown" Background="LightBlue">
     </Grid>
 </Window>
