--- a/Projects/GangOfFour/MVVM/MVVM/MainWindow.xaml
+++ b/Projects/GangOfFour/MVVM/MVVM/MainWindow.xaml
@@ -19,14 +19,14 @@
             <TextBlock Text="Цена, руб." />
             <TextBox Text="{Binding Price, UpdateSourceTrigger=PropertyChanged}" />
             <Button Click="Add_Click">Добавить</Button>
-            <Button Click="Delete_Click" >Удалить</Button>
+            <Button Click="Delete_Click">Удалить</Button>
         </StackPanel>
         <ListBox Grid.Column="0" Grid.Row="0" ItemsSource="{Binding Cars}"
                  SelectedItem="{Binding SelectedCar}" Grid.ColumnSpan="2" Margin="0,170,0,0">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="5" Orientation="Horizontal">
-                        <TextBlock Foreground="Crimson" Text="{Binding Model, StringFormat={}{0}}" />
+                        <TextBlock Foreground="Crimson"  Text="{Binding Model, StringFormat={}{0}}" FontWeight="Bold" />
                         <TextBlock Text="{Binding Path=MaxSpeed, StringFormat={} {0}}" />
                         <TextBlock Text="{Binding Path=Price, StringFormat={} {0}}" />
                     </StackPanel>
