--- a/Projects/Lesson7/EFTest/EntityFrameworkApplication/MainWindow.xaml
+++ b/Projects/Lesson7/EFTest/EntityFrameworkApplication/MainWindow.xaml
@@ -49,8 +49,8 @@
 			   Margin="5"
 			   AutoGenerateColumns="False"
 			   IsReadOnly="True"
-			   ItemsSource="{Binding TracksList}">
-            <DataGrid.Columns>
+               ItemsSource="{Binding}">
+               <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" 
 							Width="30" 
 							Binding="{Binding TrackId}" />
